:hammer: fix: overflow of video element on smaller screens (#178)
* Update summary-style.css

Fixed issue #132. The video now takes the 100% available space according to the device width, the box sizing property makes sure that the padding and margin remains intact.

* Fix: video element overflow on summary pages when screen width is less than 700

--- a/summary/static/css/summary-style.css
+++ b/summary/static/css/summary-style.css
@@ -298,3 +298,7 @@ pre,
 samp {
 	font-family: "PT Mono", monospace;
 }
+
+video {
+	width: 100%;
+}
